; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_psip.c_ATSC_AddVLCEPGEvent.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_ts_psip.c_ATSC_AddVLCEPGEvent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@VLC_TICK_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*, i32*)* @ATSC_AddVLCEPGEvent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ATSC_AddVLCEPGEvent(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call %struct.TYPE_5__* @ATSC_CreateVLCEPGEvent(i32* %13, i32* %14, i32* %15, i32* %16)
  store %struct.TYPE_5__* %17, %struct.TYPE_5__** %12, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %19 = icmp ne %struct.TYPE_5__* %18, null
  br i1 %19, label %20, label %32

20:                                               ; preds = %5
  %21 = load i32*, i32** %11, align 8
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %23 = call i64 @vlc_epg_AddEvent(i32* %21, %struct.TYPE_5__* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %20
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* %6, align 4
  br label %34

29:                                               ; preds = %20
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %31 = call i32 @vlc_epg_event_Delete(%struct.TYPE_5__* %30)
  br label %32

32:                                               ; preds = %29, %5
  %33 = load i32, i32* @VLC_TICK_INVALID, align 4
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %32, %25
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local %struct.TYPE_5__* @ATSC_CreateVLCEPGEvent(i32*, i32*, i32*, i32*) #1

declare dso_local i64 @vlc_epg_AddEvent(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @vlc_epg_event_Delete(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
